<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/bg">

    <TextView
        android:layout_margin="5dp"
        android:id="@+id/tv_show"
        android:textColor="@color/colorW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/select_file_path" />

    <TextView
        android:id="@+id/tv2"
        android:layout_margin="5dp"
        android:textColor="@color/colorW"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:text="@string/select_ip"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/but_create_zx"
        android:layout_margin="5dp"
        android:textColor="@color/colorW"
        android:textSize="20sp"
        android:background="@drawable/but_bg_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_for_qr"/>

    <Button
        android:id="@+id/but_send"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/but_bg_color"
        android:layout_width="match_parent"
        android:textColor="@color/colorW"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/but_send"/>

    <Button
        android:id="@+id/but_cls"
        android:layout_margin="5dp"
        android:textColor="@color/colorW"
        android:textSize="20sp"
        android:background="@drawable/but_bg_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shuaxin"/>

    <Button
        android:id="@+id/but_cancel"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/but_bg_color"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:textColor="@color/colorW"
        android:textSize="20sp"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/lv_isconnect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
