<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/mbg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

    <TextView
        android:id="@+id/but_sel_send"
        android:layout_margin="5dp"
        android:text="@string/send_sel"
        android:textSize="28sp"
        android:clickable="true"
        android:background="@drawable/tv_but_bg_color"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/but_sel_accept"
        android:layout_margin="5dp"
        android:text="@string/accept_sel"
        android:textSize="28sp"
        android:clickable="true"
        android:background="@drawable/tv_but_bg_color"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/but_exit"
        android:layout_margin="5dp"
        android:text="@string/exit"
        android:textSize="28sp"
        android:clickable="true"
        android:background="@drawable/tv_but_bg_color"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="80dp" />

    </LinearLayout>

    </LinearLayout>