<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">

    <TextView
        android:layout_margin="5dp"
        android:id="@+id/tv_mIp"
        android:textSize="20sp"
        android:textColor="@color/colorW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="5dp"
        android:id="@+id/tv_isconnecthostpot"
        android:textSize="20sp"
        android:textColor="#03f017"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="5dp"
        android:id="@+id/tv_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorW"
        android:text="@string/w_accept"/>

    <Button
        android:layout_margin="5dp"
        android:id="@+id/but_search"
        android:textSize="20sp"
        android:textColor="@color/colorW"
        android:background="@drawable/but_bg_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_s_hostpot"/>

    <Button
        android:layout_marginBottom="5dp"
        android:id="@+id/but_scan"
        android:textSize="20sp"
        android:textColor="@color/colorW"
        android:background="@drawable/but_bg_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="扫描二维码"/>

    <Button
        android:textSize="20sp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/but_cancel1"
        android:textColor="@color/colorW"
        android:layout_width="match_parent"
        android:background="@drawable/but_bg_color"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>

    <ListView
        android:id="@+id/lv_hostpot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>